--- a/hw1.html
+++ b/hw1.html
@@ -14,7 +14,7 @@ I grew up in Beit Sahour, Palestine
 Something no one would expect about me is that I enjoy reading murder mystery 
 <br> <br> 
 My Favorate place: <br> 
-<img src="C:place.jpg" alt="My Highschool is my favorate place" width="500" height="333">
+<img src="place.jpg" alt="My Highschool is my favorate place" width="500" height="333">
 
 </body>
 </html>
