--- a/hw1.html
+++ b/hw1.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-<!--<h1> CS20 Assignment 1: Get on the Web</h1>-->
+<h1> CS20 Assignment 1: Get on the Web</h1>
 My Name is: Esther Khair 
 <br> <br>
 My majors are: Computer science and Psycology
